@@ -1,6 +1,6 @@
 ///////////////////////////////////////////////////////////////////////////////////////////////
 // checkstyle: Checks Java source code and other text files for adherence to a set of rules.
-// Copyright (C) 2001-2025 the original author or authors.
+// Copyright (C) 2001-2026 the original author or authors.
 //
 // This library is free software; you can redistribute it and/or
 // modify it under the terms of the GNU Lesser General Public
@@ -19,7 +19,7 @@
 
 package com.puppycrawl.tools.checkstyle.checks.javadoc;
 
-import java.util.LinkedList;
+import java.util.ArrayList;
 import java.util.List;
 
 /**
@@ -46,7 +46,7 @@ import java.util.List;
 class TagParser {
 
     /** HtmlTags found on the input line of text. */
-    private final List<HtmlTag> tags = new LinkedList<>();
+    private final List<HtmlTag> tags = new ArrayList<>();
 
     /**
      * Constructs a TagParser and finds the first tag if any.
@@ -66,7 +66,7 @@ class TagParser {
      *         left to return.
      */
     public HtmlTag nextTag() {
-        return tags.remove(0);
+        return tags.removeFirst();
     }
 
     /**
