@@ -1,6 +1,6 @@
 ///////////////////////////////////////////////////////////////////////////////////////////////
 // checkstyle: Checks Java source code and other text files for adherence to a set of rules.
-// Copyright (C) 2001-2025 the original author or authors.
+// Copyright (C) 2001-2026 the original author or authors.
 //
 // This library is free software; you can redistribute it and/or
 // modify it under the terms of the GNU Lesser General Public
@@ -127,7 +127,7 @@ public class XpathRegressionTest extends AbstractModuleTestSupport {
         return Definitions.INTERNAL_MODULES.stream()
             .map(moduleName -> {
                 final List<String> packageTokens = Splitter.on(".").splitToList(moduleName);
-                return packageTokens.get(packageTokens.size() - 1);
+                return packageTokens.getLast();
             })
             .collect(Collectors.toUnmodifiableSet());
     }
